# home-care-cost-model

./: .gitignore  Dockerfile  LICENSE  LIVE_URLS.md  PUBLISH_CHECKLIST.md  README.md  TODO.md  composer.json  package.json  pyproject.toml
datasets/: README.md  SOURCES.md  generate_home_care_cost_model_archetypes.py  generate_home_care_per_province_rate_bands.py  generate_home_care_scenarios.py  generate_home_care_services_canada.py  generate_home_care_subsidy_gap.py  generate_home_care_subsidy_programs.py  generate_home_care_tax_parameters.py  generate_home_care_tax_relief_sensitivity.py  home_care_cost_model_archetypes.csv  home_care_per_province_rate_bands.csv  home_care_scenarios.csv  home_care_services_canada.csv  home_care_subsidy_gap.csv  home_care_subsidy_programs.csv  home_care_tax_parameters_2026.csv  home_care_tax_relief_sensitivity.csv  pull_sources.py
docs/: api.rst  case-studies.rst  conf.py  datasets.rst  index.rst  requirements.txt
engines/elixir/: mix.exs
engines/elixir/lib/: home_care_cost_model.ex
engines/go/: go.mod  main.go
engines/java/: pom.xml
engines/java/src/main/java/io/github/davecookvectorlabs/homecare/: HomeCareCalculator.java
engines/nostr/: publish.py
engines/php/: composer.json
engines/php/src/: HomeCareCalculator.php
engines/python/: engine.py  test_engine.py
engines/ruby/: home_care_cost_model-0.1.0.gem  home_care_cost_model.gemspec
engines/ruby/lib/: home_care_cost_model.rb
engines/rust/: Cargo.toml
engines/rust/src/: main.rs
kaggle/: dataset-metadata.json  home_care_cost_model_analysis.ipynb  kernel-metadata.json
notebooks/: home_care_cost_analysis.ipynb
observable/: home-care-cost-model.md
pdfs/: generate_pdfs.py
public/: index.php
scribd/: metadata.json  upload.py
