[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "home-care-cost-model"
version = "0.1.0"
description = "A reference cost model for Canadian home care service-mix decisions (PSW, housekeeping, nursing) with 2026 tax relief stack and per-province subsidy eligibility."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dave Cook", email = "dave@binx.ca"},
]
keywords = [
    "home-care",
    "psw",
    "personal-support-worker",
    "aging-in-place",
    "canada",
    "health-policy",
    "cost-model",
    "tax-credit",
    "medical-expense-tax-credit",
    "disability-tax-credit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Sociology",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/DaveCookVectorLabs/home-care-cost-model"
Documentation = "https://home-care-cost-model.readthedocs.io/"
Repository = "https://github.com/DaveCookVectorLabs/home-care-cost-model"
"Bug Tracker" = "https://github.com/DaveCookVectorLabs/home-care-cost-model/issues"
"Working Paper (PDF)" = "https://www.binx.ca/guides/home-care-cost-model-guide.pdf"

[tool.setuptools.packages.find]
where = ["engines/python"]
